--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=online-quiz-system
+
+# Server port (optional)
+server.port=8080
+
+# H2 Console settings
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Database configuration
+spring.datasource.url=jdbc:h2:mem:quizdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Enable SQL logging (optional)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
